<resources>
    <string name="app_name">Phone1</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_map_api_key">AIzaSyDNX1jnd9BZukGsfgHJnmnWEqJVjdIBRSY</string>
    <string name="Welcome_label">Welcome %s</string>
    <string name="distance_label">Distance</string>
    <string name="speed_label">Speed</string>
    <string name="time_label">Time</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="My_Records">My Records</string>
    <string name="Hours">Hours</string>
    <string name="Continue">Continue</string>
    <string name="Next">Next</string>
    <string name="Welcome_Phone_Destination">Welcome to Phone Destination, Please enter your name...</string>
    <string name="Your_Records">Records</string>
    <string name="Distance_record">Distance record</string>
    <string name="Time_record">Time record</string>
    <string name="kilometers">%.1f kilometers</string>
    <string name="hours">%.1f hours</string>
    <string name="Today">Today</string>
    <string name="Your_goals">Let\'s set up your goals swiftly!</string>
    <string name="kilometers_per_day">%.1f kilometers per day</string>
    <string name="Your_calendar">Your calendar</string>
    <string name="January_2017_Week_2">January 2017, Week 2</string>
    <string name="Name">Name</string>
    <string name="Save_to_calendar">Save to calendar</string>
    <string name="save_calendar">The app will save your data to the calendar</string>
    <string name="distance_amount">%.1f km of %.1f km</string>
    <string name="mph_amount">%.1f km/h of %.1f km/h</string>
    <string name="min_amount">%.1f min of %.1f h</string>
    <string name="Speed_Record">Speed Record</string>
    <string name="Time_Record">Time Record</string>
    <string name="Achieved">Achieved %s</string>
    <string name="how_fast_label">How fast will you move?</string>
    <string name="average_speed_per_day">%.1f km/h average per day</string>
    <string name="How_much_move_label">How much will you move?</string>
    <string name="hours_per_day_label">%.1f hours per day</string>
    <string name="NEXT">NEXT</string>
    <string name="speed_record">%.1f km/h</string>
    <string name="distance_calendar_label">%.1f\km</string>
    <string name="speed_calendar_label">Avg. Speed: %.1f km/h</string>
    <string name="time_calendar_label">in %.1fh</string>
    <string name="calendar_date_label">%s %d, week %d</string>
    <string name="language_label_EN">English</string>
    <string name="language_label_CN">Chinese</string>
    <string name="language_label_SE">Swedish</string>
    <string name="language_label_TR">Turkish</string>
    <string name="language_label_JP">Japanese</string>

</resources>
