<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/goalsSetupRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.jonwid78.phone1.GoalsFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/goalsSetupTitle"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:paddingEnd="32dp"
        android:paddingStart="32dp"
        android:text="@string/Your_goals"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <LinearLayout
        android:layout_width="359dp"
        android:layout_height="286dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalsSetupTitle"
        app:layout_constraintVertical_bias="0.20999998">

        <ImageView
            android:id="@+id/goalsSetupImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:src="@drawable/distance" />

        <TextView
            android:id="@+id/goalSetupDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance_label"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/goalCurrentSelectionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/kilometers_per_day"
            android:textAlignment="center" />

        <SeekBar
            android:id="@+id/goalChangeSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:max="50" />

        <Button
            android:id="@+id/continueButton"
            style="@android:style/Widget.Material.Button"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/NEXT" />

        <ProgressBar
            android:id="@+id/currentGoalProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:foregroundGravity="bottom"
            android:indeterminate="false"
            android:max="3"
            android:progress="1"
            android:progressTint="@color/colorAccent" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
