<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jonwid78.phone1.LanguageFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageButton
        android:id="@+id/languageBtnUK2"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="128dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="UK"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/languageBtnCN"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/unitedkingdom" />

    <ImageButton
        android:id="@+id/languageBtnTR2"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="TR"
        android:scaleType="centerCrop"
        android:tint="@color/language_tint_black"
        app:layout_constraintEnd_toStartOf="@+id/languageBtnJP"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/turkey" />

    <ImageButton
        android:id="@+id/languageBtnJP2"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="JP"
        android:scaleType="centerCrop"
        android:tint="@color/language_tint_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/languageBtnTR"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/japan" />

    <ImageButton
        android:id="@+id/languageBtnCN2"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginTop="128dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="CN"
        android:scaleType="centerCrop"
        android:tint="@color/language_tint_black"
        app:layout_constraintEnd_toStartOf="@+id/languageBtnSE"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/languageBtnUK"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/china" />

    <ImageButton
        android:id="@+id/languageBtnSE2"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="SE"
        android:scaleType="centerCrop"
        android:tint="@color/language_tint_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/languageBtnCN"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sweden" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/language_label_EN"
        app:layout_constraintEnd_toEndOf="@+id/languageBtnUK"
        app:layout_constraintStart_toStartOf="@+id/languageBtnUK"
        app:layout_constraintTop_toBottomOf="@+id/languageBtnUK" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/language_label_CN"
        app:layout_constraintEnd_toEndOf="@+id/languageBtnCN"
        app:layout_constraintStart_toStartOf="@+id/languageBtnCN"
        app:layout_constraintTop_toBottomOf="@+id/languageBtnCN" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_label_SE"
        app:layout_constraintEnd_toEndOf="@+id/languageBtnSE"
        app:layout_constraintStart_toStartOf="@+id/languageBtnSE"
        app:layout_constraintTop_toBottomOf="@+id/languageBtnSE" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/language_label_JP"
        app:layout_constraintEnd_toEndOf="@+id/languageBtnJP"
        app:layout_constraintStart_toStartOf="@+id/languageBtnJP"
        app:layout_constraintTop_toBottomOf="@+id/languageBtnJP" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/language_label_TR"
        app:layout_constraintEnd_toEndOf="@+id/languageBtnTR"
        app:layout_constraintStart_toStartOf="@+id/languageBtnTR"
        app:layout_constraintTop_toBottomOf="@+id/languageBtnTR" />
</android.support.constraint.ConstraintLayout>
