<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/time_label"
            app:layout_constraintEnd_toEndOf="@+id/timeDonutChart"
            app:layout_constraintStart_toStartOf="@+id/timeDonutChart"
            app:layout_constraintTop_toBottomOf="@+id/timeDonutChart" />

        <TextView
            android:id="@+id/speedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/speed_label"
            app:layout_constraintEnd_toEndOf="@+id/speedDonutChart"
            app:layout_constraintStart_toStartOf="@+id/speedDonutChart"
            app:layout_constraintTop_toBottomOf="@+id/speedDonutChart" />

        <com.jonwid78.phone1.DonutChart
            android:id="@+id/distanceDonutChart"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/speedDonutChart"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.jonwid78.phone1.DonutChart
            android:id="@+id/timeDonutChart"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/speedDonutChart"
            app:layout_constraintTop_toTopOf="parent" />

        <com.jonwid78.phone1.DonutChart
            android:id="@+id/speedDonutChart"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/timeDonutChart"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/distanceDonutChart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/distanceTitleLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/distance_label"
            app:layout_constraintEnd_toEndOf="@+id/distanceDonutChart"
            app:layout_constraintHorizontal_bias="0.423"
            app:layout_constraintStart_toStartOf="@+id/distanceDonutChart"
            app:layout_constraintTop_toBottomOf="@+id/distanceDonutChart" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/distanceDonutChart"
            app:layout_constraintEnd_toEndOf="@+id/distanceDonutChart"
            app:layout_constraintStart_toStartOf="@+id/distanceDonutChart"
            app:layout_constraintTop_toTopOf="@+id/distanceDonutChart"
            app:srcCompat="@drawable/distance" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/speedDonutChart"
            app:layout_constraintEnd_toEndOf="@+id/speedDonutChart"
            app:layout_constraintStart_toStartOf="@+id/speedDonutChart"
            app:layout_constraintTop_toTopOf="@+id/speedDonutChart"
            app:srcCompat="@drawable/speed" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/timeDonutChart"
            app:layout_constraintEnd_toEndOf="@+id/timeDonutChart"
            app:layout_constraintStart_toStartOf="@+id/timeDonutChart"
            app:layout_constraintTop_toTopOf="@+id/timeDonutChart"
            app:srcCompat="@drawable/timer" />

        <TextView
            android:id="@+id/distanceLabelTextView"
            android:layout_width="0dp"
            android:layout_height="39dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/distance_amount"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/speedLabelTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/distanceTitleLabelTextView" />

        <TextView
            android:id="@+id/speedLabelTextView"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/mph_amount"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/timeLabelTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/distanceLabelTextView"
            app:layout_constraintTop_toBottomOf="@+id/speedTextView" />

        <TextView
            android:id="@+id/timeLabelTextView"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/min_amount"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/speedLabelTextView"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>